# ChatQT

./: .gitignore  CMakeLists.txt  README.md  loginform.h  main.cpp  mainwindow-style.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sha1.cpp  startscreen.cpp
admin/: CMakeLists.txt  Logger.h  MessageHandler.cpp  MessageHandler.h  NetworkClient.h  NetworkClientLinux.cpp  NetworkClientWin.cpp  UserStatus.cpp  UserStatus.h  main.cpp
admin/admin_translations/: Admin_client_ru_RU.ts
admin/translations/: Chat_client_ru_RU.ts
admin/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  startscreen.cpp  startscreen.h  startscreen.ui
client/: CMakeLists.txt  Logger.cpp  Mediator.cpp  Mediator.h  MessageHandler.cpp  MessageHandler.h  NetworkClient.h  NetworkClientLinux.cpp  NetworkClientWin.cpp  UserStatus.cpp  UserStatus.h  console_interface.cpp  console_interface.h  interaction_chat.cpp  interaction_chat.h  interactive_interface.h  main.cpp
client/translations/: Chat_client_ru_RU.ts
client/ui/: loginform.cpp  loginform.h  loginform.ui  mainwindow-style.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
common/: CMakeLists.txt  DOC_COMMON.md
common/include/: Message.h  User.h
common/src/: Message.cpp  User.cpp
server/: CMakeLists.txt
server/include/: BD.h  BD_File.h  BD_MySQL.h  Core.h  Logger.h  MessageHandler.h  NetworkServer.h  dataUserOnline.h  hashPass.h  sha1.h
server/src/: Core.cpp  DB_MySQL.cpp  Logger.cpp  MessageHandler.cpp  NetworkServer.cpp  NetworkServer1.cpp  dataUserOnline.cpp  main.cpp
